Bug 1192696 - Enable custom columns to be Grouped By Sort - backend. r=rkent