mailnews/base/src/nsMsgGroupView.cpp
@@ -233,10 +233,8 @@ nsresult nsMsgGroupView::HashHdr(nsIMsgDBHdr *msgHdr, nsString& aHashKey)
     {
       nsIMsgCustomColumnHandler* colHandler = GetCurColumnHandlerFromDBInfo();
       if (colHandler)
-      {
         rv = colHandler->GetSortStringForRow(msgHdr, aHashKey);
-        break;
-      }
+      break;
     }
     case nsMsgViewSortType::byCorrespondent:
       if (IsOutgoingMsg(msgHdr))
@@ -383,6 +381,17 @@ NS_IMETHODIMP nsMsgGroupView::OpenWithHdrs(nsISimpleEnumerator *aHeaders, nsMsgV
   m_sortOrder = aSortOrder;
   m_viewFlags = aViewFlags | nsMsgViewFlagsType::kThreadedDisplay | nsMsgViewFlagsType::kGroupBySort;
   SaveSortInfo(m_sortType, m_sortOrder);
+
+  if (m_sortType == nsMsgViewSortType::byCustom)
+  {
+    // If the desired sort is a custom column and there is no handler found,
+    // it hasn't been registered yet; after the custom column observer is
+    // notified with MsgCreateDBView and registers the handler, it will come
+    // back and build the view.
+    nsIMsgCustomColumnHandler* colHandler = GetCurColumnHandlerFromDBInfo();
+    if (!colHandler)
+      return rv;
+  }
 
   bool hasMore;
   nsCOMPtr <nsISupports> supports;
@@ -844,10 +853,10 @@ NS_IMETHODIMP nsMsgGroupView::CellTextForColumn(int32_t aRow,
           nsIMsgCustomColumnHandler* colHandler =
             GetCurColumnHandlerFromDBInfo();
           if (colHandler)
-          {
             rv = colHandler->GetSortStringForRow(msgHdr.get(), aValue);
-            break;
-          }
+          if (aValue.IsEmpty())
+            aValue.AssignLiteral("*");
+          break;
         }
 
         default:
@@ -954,3 +963,22 @@ bool nsMsgGroupView::GroupViewUsesDummyRow()
   // Return true to always use a header row as root grouped parent row.
   return true;
 }
+
+NS_IMETHODIMP nsMsgGroupView::AddColumnHandler(const nsAString& column,
+                                                 nsIMsgCustomColumnHandler* handler)
+{
+  nsMsgDBView::AddColumnHandler(column, handler);
+
+  // If the sortType is byCustom and the desired custom column is the one just
+  // registered, build the view.
+  if (m_sortType == nsMsgViewSortType::byCustom)
+  {
+    nsAutoString curCustomColumn;
+    GetCurCustomColumn(curCustomColumn);
+    if (curCustomColumn == column)
+      RebuildView(m_viewFlags);
+  }
+
+  return NS_OK;
+}
+
